Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83908

Material.System does not work on Windows 10 in Dark Mode

XMLWordPrintable

    • Windows
    • 2248487c6ca9d5459c70a16868d5aeee07d96157 (qt/qtbase/dev) 77659e03393820daace991c28021cfb8b67f871a (qt/qtbase/6.2)

      When setting 

      Material.theme: Material.System

      on Windows 10 with Dark Mode enabled, qml does not seems to recognize that the system is in Dark Mode.

      To reproduce:

      import QtQuick 2.9
      import QtQuick.Controls 2.2
      import QtQuick.Controls.Material 2.2
      ApplicationWindow {
       id: app
       visible: true
       Material.theme: Material.System
       Component.onCompleted: console.log(app.Material.theme)
      }
      

      By running the app I get the following result:

      $ qmlscene .\theme.qml
      qml: 0
      

      qml seems to think that I have the OS in light mode.

        For Gerrit Dashboard: QTBUG-83908
        # Subject Branch Project Status CR V

            mitch_curtis Mitch Curtis
            dennisf Dennis Fokin
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: