src/gui/kernel/qplatformtheme.h
@@ -128,6 +128,12 @@ public:
         MessageDialog
     };
 
+    enum class Appearance {
+        Unknown = 0x0000,
+        Light = 0x0001,
+        Dark = 0x0002
+    };
+
     enum Palette {
         SystemPalette,
         ToolTipPalette,
@@ -298,6 +304,8 @@ public:
 #ifndef QT_NO_SYSTEMTRAYICON
     virtual QPlatformSystemTrayIcon *createPlatformSystemTrayIcon() const;
 #endif
+
+    virtual Appearance appearance() const;
 
     virtual const QPalette *palette(Palette type = SystemPalette) const;
 
