src/plugins/platforms/cocoa/qcocoatheme.mm
@@ -533,6 +533,11 @@ QVariant QCocoaTheme::themeHint(ThemeHint hint) const
     return QPlatformTheme::themeHint(hint);
 }
 
+QPlatformTheme::Appearance QCocoaTheme::appearance() const
+{
+    return qt_mac_applicationIsInDarkMode() ? Appearance::Dark : Appearance::Light;
+}
+
 QString QCocoaTheme::standardButtonText(int button) const
 {
     return button == QPlatformDialogHelper::Discard ?
